[PACA-991] Add Fiss Revenue Lines